# md

./: .gitignore  CMakeLists.txt  README.md
examples/: 2i_dofs.csv  2ii_025_m.xyz  2ii_200_init.uvw  4_3.txt  5.txt  bonus_eta00001.csv  bonus_eta00100.csv  bonus_eta10000.csv  bonus_output.txt  nondimensional_lj.cpp  poly_springs.cpp  quenched_lj.cpp
examples/lj1/: 10.txt  2.txt  2_2.txt  3.txt  3_data.csv  3_mom.csv  4.txt  4_2.txt  6.txt  7.txt  8.txt  nondimensional_lj.cpp  quenched_lj.cpp
examples/lj2/: avg_pressure_liquid_Ar.cpp  equilibrated_liquid_lj.uvw  equilibrated_liquid_lj.xyz  liquid.xyz  liquid_data.csv  liquid_lj.cpp  liquid_mom.csv  plot_liquid_data.jl
examples/nvt/: cv.cpp  liquid_lj.xyz  nvt_avg_pressure_Ar.cpp  nvt_liquid_lj.cpp  plot_qe3.jl  qe.cpp  qe2.cpp  qe3.cpp  qe3.jl  qe3a.jl
examples/spring/: 2i.xyz  2i_data.csv  2ii_025_init.uvw  2ii_025_init.xyz  2ii_025_m_dofs.csv  2ii_025_m_init.uvw  2ii_025_p_data.csv  2ii_025_p_dofs.csv  2ii_100_m.xyz  2ii_100_m_dofs.csv  2ii_100_m_init.xyz  2ii_100_p_data.csv  2ii_100_p_dofs.csv  2ii_200.xyz  2ii_200_data.csv  poly_springs.cpp  spring.cpp
hw1/: 4.jl  5output.txt  hw1.tex  master.bib  start.cpp
hw2/: 10.txt  CMakeLists.txt  hw2.tex
hw2/doc/: 2b.jl  2c.jl  2c1.jl  2c2.jl  2c3.jl  2c4.jl  2d.jl  2i_energy.ods  3.jl  3_2.jl  bonus.jl  bonus2.jl  hw2.tex  prob2c1.m  vmd1.tga  vmd100.tga  vmd50.tga
hw2/include/: array_helpers.hpp  callbacks.hh  callbacks.hpp  debug.hpp  integration.hh  integration.hpp  mmd.hpp  mmd_types.hpp  molecular.hpp  potentials.hh  potentials.hpp  simulation.hh  simulation.hpp  simulation.tpp  unordered_pair.hpp
hw2/prob/: 2i_init.uvw  2i_init.xyz  2ii_025.xyz  2ii_100_m_init.uvw  2ii_100_p.xyz  2ii_200_dofs.csv  3.xyz  3_2.txt  3_3.txt  9.txt  prob2i.cpp
hw2/src/: callbacks.cc  callbacks.cpp  integration.cpp  molecular.cpp  potentials.cpp  simulation.cpp
include/: array_helpers.hpp  boundary.hpp  callbacks.hpp  debug.hpp  distance.hpp  integration.hpp  mmd.hpp  mmd_types.hpp  mprof.hpp  mutators.hpp  potentials.hpp  simulation.hpp  unordered_pair.hpp
lec2/: 5input.txt  5output.txt  start  start.cpp
src/: boundary.cpp  callbacks.cpp  distance.cpp  integration.cpp  mutators.cpp  potentials.cpp  simulation.cpp
